--- a/fbadhelper/build.gradle
+++ b/fbadhelper/build.gradle
@@ -27,10 +27,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.facebook.android:audience-network-sdk:4.+'
     compile 'de.hdodenhof:circleimageview:2.2.0'
 }
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.EdgeJH'
